Add the connection string to MongoDB.

--- a/RKPP/Web.config
+++ b/RKPP/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-RKPP-20170213091210.mdf;Initial Catalog=aspnet-RKPP-20170213091210;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NewDBContext" connectionString="mongodb://appharbor_x0m3klh8:a0mugts4a6mlgo4va63m5katcv@ds155509.mlab.com:55509/appharbor_x0m3klh8" providerName="MongoDB.Driver.MongoClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
