--- a/RKPP/RKPP.csproj
+++ b/RKPP/RKPP.csproj
@@ -209,10 +209,23 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="fonts\SIL Open Font License.txt" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="fonts\SourceSansPro-Black.otf" />
+    <Content Include="fonts\SourceSansPro-BlackIt.otf" />
+    <Content Include="fonts\SourceSansPro-Bold.otf" />
+    <Content Include="fonts\SourceSansPro-BoldIt.otf" />
+    <Content Include="fonts\SourceSansPro-ExtraLight.otf" />
+    <Content Include="fonts\SourceSansPro-ExtraLightIt.otf" />
+    <Content Include="fonts\SourceSansPro-It.otf" />
+    <Content Include="fonts\SourceSansPro-Light.otf" />
+    <Content Include="fonts\SourceSansPro-LightIt.otf" />
+    <Content Include="fonts\SourceSansPro-Regular.otf" />
+    <Content Include="fonts\SourceSansPro-Semibold.otf" />
+    <Content Include="fonts\SourceSansPro-SemiboldIt.otf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
